--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
+# Jupyter Notebook
 *.ipynb_checkpoints
-*.vscode/
-dataset/unsplash*
-meetings/
-paperwork
-references
-*__pycache__
-extrainfo
-*.sublime
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+
+# IDE files
+*.sublime-workspace
 *-workspace
+
+# Project files
+trained_models/
