--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,11 @@ opencv-python-headless = "~=4.3.0"
 p_tqdm = "*"
 pandas = "~=1.1.4"
 python = "^3.6.9"
+streamlit = "*"
 tensorflow = "2.3.1"
 tensorflow_addons = "0.11.2"
+pyproject-toml = "^0.0.11"
+
+[tool.poetry.dev-dependencies]
+mypy = "^0.910"
+flake8 = "^4.0.1"
